test/expected/rethrow-callback.txt
/scripts/rethrow-callback.js:8
      throw err;
      ^

Error: error
    at asyncFunction (/scripts/rethrow-callback.js:r:c)
    at mainFunction (/scripts/rethrow-callback.js:r:c)
    at Object.<anonymous> (/scripts/rethrow-callback.js:r:c)
    at Module._compile (internal/modules/cjs/loader.js:r:c)
    at Object.Module._extensions..js (internal/modules/cjs/loader.js:r:c)
    at Module.load (internal/modules/cjs/loader.js:r:c)
    at tryModuleLoad (internal/modules/cjs/loader.js:r:c)
    at Function.Module._load (internal/modules/cjs/loader.js:r:c)
    at Function.Module.runMain (internal/modules/cjs/loader.js:r:c)
    at new TickObject (internal/process/next_tick.js:r:c)
    at process.nextTick (internal/process/next_tick.js:r:c)
    at nextTickFunction (/scripts/rethrow-callback.js:r:c)
    at internalTickCallback (internal/process/next_tick.js:r:c)
    at process._tickCallback (internal/process/next_tick.js:r:c)
    at Function.Module.runMain (internal/modules/cjs/loader.js:r:c)
    at new TickObject (internal/process/next_tick.js:r:c)
    at process.nextTick (internal/process/next_tick.js:r:c)
    at asyncFunction (/scripts/rethrow-callback.js:r:c)
    at mainFunction (/scripts/rethrow-callback.js:r:c)
    at Object.<anonymous> (/scripts/rethrow-callback.js:r:c)
    at Module._compile (internal/modules/cjs/loader.js:r:c)
    at Object.Module._extensions..js (internal/modules/cjs/loader.js:r:c)
    at Module.load (internal/modules/cjs/loader.js:r:c)
    at tryModuleLoad (internal/modules/cjs/loader.js:r:c)
    at Function.Module._load (internal/modules/cjs/loader.js:r:c)
    at Function.Module.runMain (internal/modules/cjs/loader.js:r:c)
    at startup (internal/bootstrap/node.js:r:c)
    at bootstrapNodeJSCore (internal/bootstrap/node.js:r:c)
